Context Menu brings up Pose Mode menu while in Weight Paint mode if armature is also selected #73384

Closed
opened 2020-01-25 07:56:10 +01:00 by Wayne Dixon · 6 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-23 10:50, hash: dee01cad19
Worked: (optional)

Short description of error
To be able to select the armature bones while weight painting, you need to first select the armature (object mode) then shift select the mesh (object mode)
Then switch to weight paint mode with both objects select but the mesh the active object.

Now you can select the bones you want to weight paint, but when you press W to bring up the weight menu, it brings up pose menu.

Exact steps for others to reproduce the error

  • Add an armature object
  • Parent the default cube to the armature using Armature Deform
  • With the armature selected, select the cube and enter Weight Paint mode.
  • Right-click to open the context menu
  • It will open the Pose Mode menu rather than the Weight Paint menu

See attached video and blend file, here:

weight_paint_wrong_menu.blend

weight_paint_wrong_menu.mp4

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-23 10:50, hash: `dee01cad19` Worked: (optional) **Short description of error** To be able to select the armature bones while weight painting, you need to first select the armature (object mode) then shift select the mesh (object mode) Then switch to weight paint mode with both objects select but the mesh the active object. Now you can select the bones you want to weight paint, but when you press W to bring up the weight menu, it brings up pose menu. **Exact steps for others to reproduce the error** - Add an armature object - Parent the default cube to the armature using Armature Deform - With the armature selected, select the cube and enter Weight Paint mode. - Right-click to open the context menu - It will open the Pose Mode menu rather than the Weight Paint menu See attached video and blend file, here: [weight_paint_wrong_menu.blend](https://archive.blender.org/developer/F8300741/weight_paint_wrong_menu.blend) [weight_paint_wrong_menu.mp4](https://archive.blender.org/developer/F8300742/weight_paint_wrong_menu.mp4)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton was assigned by William Reynish 2020-01-25 15:45:24 +01:00

It seems like the wrong mode is taking precedence in this case.

It seems like the wrong mode is taking precedence in this case.
William Reynish changed title from Special Menu brings up Pose Menu when trying to weight paint (both objects selected) to Context Menu brings up Pose Mode menu while in Weight Paint mode if armature is also selected 2020-01-25 15:48:16 +01:00

This issue was referenced by 35e3dc9192

This issue was referenced by 35e3dc9192e73a4eb6772c2c02d628b69b4699a1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73384
No description provided.